<resources>
    <string name="app_name">Teach Reach</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_date_and_time">Choose a date and time</string>
    <string name="date_display">Date Display</string>
    <string name="shr_button_review">Review booking</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="btnStudentLogin">btnStudentLoginLabel</string>
    <string name="btnTutorLogin">btnTutorLoginLabel</string>
    <string name="btnSignupAsTutor">Not a tutor? Signup here!</string>
    <string name="btnLoginAsTutor">Login</string>
    <string name="tvTutorLoginTitle">Login as a Tutor</string>
    <string name="tutor_email_input_helper" />
    <string name="tvStudentLoginTitle">Login as a Student</string>
    <string name="tilLoginEmailHint">Email</string>
    <string name="tilLoginPasswordHint">Password</string>
    <string name="btnLoginAsStudent">Login</string>
    <string name="btnSignupAsStudent">Not a Student? Signup here!</string>
    <string name="tvStudentSignupTitle">Signup as a Student</string>
    <string name="tilSignupNameHint">Name</string>
    <string name="tilSignupMajorHint">Major (Optional)</string>
    <string name="tilSignupPronounsHint">Pronouns (Optional)</string>
    <string name="tilSignupPasswordHint">Password</string>
    <string name="tilSignupEmailHint">Email</string>
    <string name="btnCreateProfile">Create Profile</string>
    <string name="tvTutorSignupTitle">Signup as a Tutor</string>
    <string name="btnUploadTranscript">Upload Transcript</string>
    <string name="NavBarStudentSearch">Search</string>
    <string name="NavBarStudentProfile">Profile</string>
    <string name="NavBarStudentSessions">Sessions</string>
    <string name="tvTutorLoginTopBar">Tutor Login</string>
    <string name="tvStudentProfileTopBar">My Profile</string>
    <string name="tvName">Name: </string>
    <string name="tvPronouns">Pronouns: </string>
    <string name="tvMajor">Major: </string>
    <string name="fabEditProfile">Edit Profile</string>
    <string name="searchHint">Search Here</string>
    <string name="topBarDefault">Teach Reach</string>
    <string name="NavBarChats">Chats</string>
    <string name="tvWhoAreYou">I am…</string>
    <string name="tvLoginAs">I want to login as…</string>
    <string name="myProfileBarTitle">My Profile</string>
    <string name="tvNameField">Name field</string>
    <string name="tvPronounsField">Pronouns field</string>
    <string name="tvMajorField">Major field</string>
    <string name="title_activity_edit_student_profile">
        EditStudentProfileActivity
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tvEditProfileTitle">Edit Profile</string>
    <string name="fabApply">Apply Changes</string>
    <string name="tilEditNameHint">New Name</string>
    <string name="tilEditPronounsHint">New Pronouns (Optional)</string>
    <string name="tilEditMajorHint">New Major (Optional)</string>
    <string name="editMyProfileBarTitle">Edit Profile</string>
    <string name="tilCurrentName">Current Name:</string>
    <string name="tilCurrentMajor">Current Major:</string>
    <string name="tilCurrentPronouns">Current Pronouns:</string>
    <string name="tvStudentLoginTopBar">Student Login</string>
    <string name="tbAccountSettings">Account Settings</string>
    <string name="tbcdAccountSettings">Change Email or Password</string>
    <string name="NavBarStudentRequests">Requests</string>
    <string name="tvStudentProfileCardTitle">Student</string>
    <string name="tvTutorProfileCardTitle">Tutor</string>
    <string name="tbBackTitle">Teach Reach</string>
    <string name="btnChangeEmail">Change Email</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="tvEmail">"Current Email: "</string>
    <string name="tvEmailField">dummy@example.com</string>
    <string name="tvRatings">"Ratings: "</string>
    <string name="tvHourlyRate">Hourly Rate: </string>
    <string name="tvRatingsField">Ratings Field</string>
    <string name="tvHourlyRateField">Hourly Rate Field</string>
    <string name="tvPlaceHolder">Select tutor to start booking</string>
    <string name="topAppBarTitle">Title</string>
    <string name="fabBook">Book a Session</string>
    <string name="fabMsg">Send a Message</string>
    <string name="tbcdClose">Close</string>
    <string name="tvReviews">Reviews: </string>
    <string name="tvReviewsField">★</string>
    <string name="tvTutoredCourses">Tutored Courses</string>
    <string name="tvRating">"Price: "</string>
    <string name="tvRatingField">$0.00</string>
    <string name="tvTutorCalendar">Select a Date to Book</string>
    <string name="fabChangingPassword">Changing Password</string>
    <string name="tilNewPasswordHint">New Password</string>
    <string name="tilCurrentPasswordHint">Current Password</string>
    <string name="fabChangingEmail">Changing Email</string>
    <string name="tilPasswordHint">Your Password</string>
    <string name="tilNewEmailHint">New Email</string>
    <string name="courseFilterHint">Filter by Course</string>
    <string name="majorFilterHint">Filter by Major</string>
    <string name="emailaddressview">EmailAddressView</string>
    <string name="tilEditHourlyRateHint">New Hourly Rate</string>
    <string name="btnAddCourse">Add Course</string>
    <string name="tvPreferredLocations">Preferred Locations</string>
    <string name="btnIcon" />
    <string name="tilCourseCodeHint">Course Code</string>
    <string name="tilCourseNameHint">Course Description</string>
    <string name="tvTutorImage">Tutor Icon Image</string>
    <string name="tvCourseCodeField">COURSE 0000</string>
    <string name="tilLocationHint">Location</string>
    <string name="tilLocationSearchHint">Location (Long press to reset)</string>
    <string name="tvStringField">Dummy List Item</string>
    <string name="timeSelectionTitle">Selecting for -/-/-</string>
    <string name="timeSlotTime">time here</string>
    <string name="reviewBookingTitle">Review Your Booking</string>
    <string name="tvBookingTutorName">"Tutor Name: "</string>
    <string name="tvBookingSessionTime">"Session Time: "</string>
    <string name="tvBookingSessionTimeField">HH:MM AA</string>
    <string name="tvBookingSessionDate">"Session Date: "</string>
    <string name="tvBookingSessionDateField">EEE, DD MMM yyyy</string>
    <string name="cancel">Cancel</string>
    <string name="tvBookingSessionDuration">"Duration: "</string>
    <string name="tvBookingSessionDurationField">MM minutes</string>
    <string name="tvBookingSessionPrice">"Price: "</string>
    <string name="tvBookingSessionPriceField">$xx.xx</string>
    <string name="continueBooking">Continue</string>
    <string name="tvBookingSessionLocation">Session Location:</string>
    <string name="tvBookingSessionLocationField">Somewhere</string>
    <string name="fabPaymentDetails">Enter Your Payment Details</string>
    <string name="tilCardNumberHint">16 digit card number</string>
    <string name="tilExpDateHint">MMYY</string>
    <string name="tilCVCHint">CVC</string>
    <string name="paymentMessage">Payment will be processed once session request is accepted by tutor.</string>
    <string name="priceMessage">"Your total is: "</string>
    <string name="tilReviewsHint">Minimum stars</string>
    <string name="tilMinPriceHint">$ min</string>
    <string name="tilMaxPriceHint">$ max</string>
    <string name="sortByPrice">Sort By Price</string>
    <string name="sortByReviews">Sort By Ratings</string>
    <string name="fabSessionsTitle">Sessions</string>
    <string name="tabUpcoming">Accepted</string>
    <string name="tabPending">Pending</string>
    <string name="tabPrevious">Rejected</string>
    <string name="sessionCalendar">Calendar view</string>
    <string name="sessionList">List view</string>
    <string name="date">Date</string>
    <string name="this_is_a_message">This is a Message</string>
    <string name="_10_00">10:00</string>
    <string name="time" />
    <string name="type_a_message">Type a message</string>
    <string name="image">Image</string>
    <string name="sessionWith">Session With:</string>
    <string name="sessionWithWhom">Whom</string>
    <string name="sessionStart">Starts at:</string>
    <string name="sessionStartDate">00:00 dd/mm/yy</string>
    <string name="sessionEnd">Until:</string>
    <string name="sessionDuration">xx minutes</string>
    <string name="sessionPrice">Price:</string>
    <string name="sessionCost">$xx.xx</string>
    <string name="sessionStatus">Accepted?</string>
    <string name="btnAccepted" />
    <string name="sessionDurationText">Duration:</string>
    <string name="tvMoneySpent">Money spent:</string>
    <string name="tvMoneySpentField">$xx.xx</string>
    <string name="sessionLugar">Location:</string>
    <string name="sessionLocation">Sem lugar</string>
    <string name="tvMoneyEarned">Money Earned:</string>
    <string name="tvMoneyEarnedField">Not Enough</string>
    <string name="tvAvailabilityTitle">My Availability</string>
    <string name="sessionSortAsc">Show Oldest First</string>
    <string name="sessionSortDesc">Show Latest First</string>
    <string name="tvAvailabilityTitleStudent">Tutor Availability</string>
</resources>