...
                app:layout_constraintLeft_toLeftOf="@+id/tvStudentLogin"
                app:layout_constraintRight_toRightOf="@+id/tvStudentLogin"
                app:layout_constraintTop_toBottomOf="@+id/tvStudentLogin"
                app:layout_constraintVertical_bias="0.1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStudentLoginEmail"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                android:layout_margin="16dp"
                android:hint="@string/tilLoginPasswordHint"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStudentLoginPassword"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
...
